# autonomous-browser

./: README.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend-python/: .gitignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
apps/backend-python/app/: main.py
apps/backend-python/app/api/v1/: api.py
apps/backend-python/app/api/v1/endpoints/: location.py
apps/backend-python/app/core/: config.py
apps/backend-python/app/schemas/: location.py
apps/backend-python/src/: services.py
apps/backend-python/src/functions/: homologacao_guardrail.py
apps/backend-python/src/functions/hn/: schema.py
apps/backend-python/src/functions/openai/: client.py
apps/backend-python/src/functions/openai/utils/: client.py  cost.py
apps/backend-python/src/vector_index/: normas_index.py
apps/backend-python/src/workflows/: automated.py
apps/backend-typescript/: package.json  scheduleWorkflow.ts
apps/backend-typescript/src/: server.ts  services.ts
apps/backend-typescript/src/config/: agents.ts
apps/backend-typescript/src/functions/: index.ts
apps/backend-typescript/src/protocols/: a2a.ts  fipa.ts  index.ts  mcp.ts  types.ts
apps/backend-typescript/src/workflows/: assistant.ts  automated.ts  autonomous.ts  index.ts  missionControl.ts
apps/backendpy/: package.json  pyproject.toml  schedule_workflow.py
apps/backendpy/src/: main.py  services.py
apps/backendpy/src/workflows/: automated.py  (+1 more)
apps/backendts/: .env.example  package.json
apps/backendts/src/: services.ts
apps/frontend/: package.json  tailwind.config.js  tsconfig.json
(+62 files in other folders)
