[tool.poetry]
name = "autonomous-backendpy"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
restack_ai = "^0.0.11"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
openai = "^1.52.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"